Allow optionally disabling firewall

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -69,4 +69,5 @@ common_sysctl:
     net.netfilter.nf_conntrack_generic_timeout : 600
     net.netfilter.nf_conntrack_checksum : 1
 
-enable_remi_php56: false
+disable_firewall: false
+
