Add wget, net-tools to wcl-common to install.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ common_packages_redhat:
     - atop
     - git
     - libselinux-python
+    - wget
+    - net-tools
 
 common_packages_debian:
     - htop
