Abort the ssh process restart if the config is bad

--- a/tasks/ssh.yml
+++ b/tasks/ssh.yml
@@ -24,3 +24,6 @@
     regexp='(#|)\s*GSSAPIAuthentication\s*'
     state=present
   notify: restart ssh
+
+- name: Check SSH config before restarting
+  shell: /usr/sbin/sshd -t
