--- a/tasks/miscellaneous-redhat.yml
+++ b/tasks/miscellaneous-redhat.yml
@@ -10,3 +10,6 @@
     name=firewalld
     enabled=false
   when: disable_firewall
+
+- name: Change the timezone
+  command: timedatectl set-timezone {{ timezone }}
