Remove unneeded sudo

--- a/tasks/miscellaneous-debian.yml
+++ b/tasks/miscellaneous-debian.yml
@@ -12,10 +12,10 @@
   when: disable_firewall
 
 - name: Set the timezone config file
-  command: "sudo sh -c \"echo '{{ timezone }}' > /etc/timezone\""
+  command: "sh -c \"echo '{{ timezone }}' > /etc/timezone\""
 
 - name: Enable timezone settings
-  command: "sudo dpkg-reconfigure --frontend noninteractive tzdata"
+  command: "dpkg-reconfigure --frontend noninteractive tzdata"
 
 - name: Start NTP Server
   service:
