--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,36 +40,44 @@ common_limits:
         - hard
         - soft
 
+#
+# Kernel Tuning documentation:
+#
+# https://www.kernel.org/doc/Documentation/networking/ip-sysctl.txt
+# https://www.kernel.org/doc/Documentation/sysctl/net.txt
+# https://www.kernel.org/doc/Documentation/sysctl/vm.txt
+# https://www.kernel.org/doc/Documentation/sysctl/kernel.txt
+# https://www.kernel.org/doc/Documentation/sysctl/fs.txt
 common_sysctl:
     vm.swappiness: 1
     kernel.panic: 60
-    net.ipv4.tcp_syncookies: 1
-    net.ipv4.icmp_echo_ignore_broadcasts: 1
-    net.ipv4.icmp_ignore_bogus_error_responses: 1
-    net.ipv4.conf.all.accept_redirects: 0
-    net.ipv4.conf.all.rp_filter: 0
     net.ipv4.conf.all.log_martians: 1
     net.ipv4.conf.all.arp_announce: 2
     net.ipv4.conf.all.arp_ignore: 1
-    fs.file-max: 262144
+    net.ipv4.ip_local_port_range: 1024  65535
+    net.ipv4.tcp_syncookies: 1
     net.ipv4.tcp_max_syn_backlog: 65536
-    net.core.netdev_max_backlog: 32768
-    net.core.somaxconn: 32768
-    net.ipv4.tcp_timestamps: 0
-    net.ipv4.tcp_synack_retries: 2
-    net.ipv4.tcp_syn_retries: 2
     net.ipv4.tcp_tw_recycle: 0
     net.ipv4.tcp_tw_reuse: 1
-    net.ipv4.ip_local_port_range: 1024  65535
     net.ipv4.tcp_keepalive_time: 1200
     net.ipv4.tcp_keepalive_intvl: 15
     net.ipv4.tcp_keepalive_probes: 5
     net.ipv4.tcp_fin_timeout: 30
-    net.nf_conntrack_max : 262144
-    net.netfilter.nf_conntrack_max : 262144
-    net.netfilter.nf_conntrack_log_invalid : 0
-    net.netfilter.nf_conntrack_generic_timeout : 600
-    net.netfilter.nf_conntrack_checksum : 1
+    net.core.netdev_max_backlog: 32768
+    net.core.somaxconn: 32768
+    # net.ipv4.icmp_echo_ignore_broadcasts: 1
+    # net.ipv4.icmp_ignore_bogus_error_responses: 1
+    # net.ipv4.conf.all.accept_redirects: 0
+    # net.ipv4.conf.all.rp_filter: 0
+    # fs.file-max: 262144
+    # net.ipv4.tcp_timestamps: 0
+    # net.ipv4.tcp_synack_retries: 2
+    # net.ipv4.tcp_syn_retries: 2
+    # net.nf_conntrack_max : 262144
+    # net.netfilter.nf_conntrack_max : 262144
+    # net.netfilter.nf_conntrack_log_invalid : 0
+    # net.netfilter.nf_conntrack_generic_timeout : 600
+    # net.netfilter.nf_conntrack_checksum : 1
 
 disable_firewall: false
 
