instead of using shell, use command in ansible task

--- a/tasks/miscellaneous-debian.yml
+++ b/tasks/miscellaneous-debian.yml
@@ -12,7 +12,7 @@
   when: disable_firewall
 
 - name: Check current timezone
-  shell: cat /etc/timezone
+  command: cat /etc/timezone
   register: current_timezone
 
 - name: Set the timezone config file
