--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,7 @@
 # Main tasks, having all sub tasks to be included.
 #
 
-- name: Set the hostname
-  hostname:
-    name={{ inventory_hostname }}
-
+- include: hostname.yml
 - include: packages.yml
 - include: users.yml
 - include: kernel.yml
