--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -85,3 +85,6 @@ disable_firewall: false
 disable_networkmanager: false
 
 timezone: "Asia/Shanghai"
+
+bash_history_size: 10000
+bash_history_format: '%Y-%m-%d %T '
