--- a/tasks/miscellaneous-debian.yml
+++ b/tasks/miscellaneous-debian.yml
@@ -4,7 +4,7 @@
     name=ufw
     state=stopped
     enabled=false
-  when: disable_firewall
+  when: handle_firewall and disable_firewall
 
 - name: Check current timezone
   command: cat /etc/timezone
