--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - include: hostname.yml
 - include: swap.yml
-  when: enable_swap
+  when: enable_swapfile
 - include: packages.yml
 - include: users.yml
 - include: kernel.yml
