--- a/tasks/swap.yml
+++ b/tasks/swap.yml
@@ -1,22 +1,22 @@
 ---
 - name: Check if swapfile exists
   stat:
-    path={{ swap_file }}
+    path={{ swap_path }}
     get_checksum=False
     get_md5=False
   register: swapfile
 
-- name: Enable swapfile with length {{ swap_size }}
+- name: Enable swapfile
   command: "{{ item }}"
   with_items:
-    - fallocate -l {{ swap_size }} {{ swap_file }}
-    - mkswap {{ swap_file }}
-    - swapon {{ swap_file }}
+    - fallocate -l {{ swap_size }} {{ swap_path }}
+    - mkswap {{ swap_path }}
+    - swapon {{ swap_path }}
   when: swapfile.stat.exists == False
 
 - name: Make sure swapfile is included in /etc/fstab
   mount:
     name=swap
-    src={{ swap_file }}
+    src={{ swap_path }}
     fstype=swap
     state=present
