--- a/tasks/packages-redhat.yml
+++ b/tasks/packages-redhat.yml
@@ -13,6 +13,13 @@
   yum:
     name=epel-release
     state=present
+  when: ansible_distribution == 'CentOS'
+
+- name: Enable EPEL repository
+  yum:
+    name: https://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-{{ epel_version }}.noarch.rpm
+    state: present
+  when: ansible_distribution == 'Red Hat Enterprise Linux'
 
 - name: Add required binaries
   yum:
