Add utf-8 charset to LESS

--- a/tasks/miscellaneous.yml
+++ b/tasks/miscellaneous.yml
@@ -15,3 +15,11 @@
   with_items:
     - export HISTTIMEFORMAT="{{ bash_history_format }}"
     - export HISTFILESIZE={{ bash_history_size }}
+
+- name: Ensure less command can read all charset
+  lineinfile:
+    line={{ item }}
+    dest=/etc/profile.d/99-less.sh
+    create=yes
+  with_items:
+    - export LESSCHARSET=utf-8
