Add iotop as common pkg

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,7 @@ common_packages_redhat:
     - net-tools
     - ntp
     - bind-utils
+    - iotop
 
 common_packages_debian:
     - htop
@@ -38,6 +39,7 @@ common_packages_debian:
     - python-selinux
     - ntp
     - dnsutils
+    - iotop
 
 #
 # Users
