--- a/tasks/packages-redhat.yml
+++ b/tasks/packages-redhat.yml
@@ -15,11 +15,17 @@
     state=present
   when: ansible_distribution == 'CentOS'
 
-- name: Enable EPEL repository
+- name: Enable EPEL repository (not for distro 8)
   yum:
     name: https://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-{{ epel_version }}.noarch.rpm
     state: present
-  when: ansible_distribution == 'RedHat'
+  when: ansible_distribution == 'RedHat' and ansible_distribution_major_version != '8'
+
+- name: Enable EPEL repository (for distro v.8)
+  yum:
+    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ epel_version }}.noarch.rpm
+    state: present
+  when: ansible_distribution == 'RedHat' and ansible_distribution_major_version == '8'
 
 - name: Add required binaries
   yum:
